<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">
    <!-- Scrollable content area -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/openFileBtn"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_new_pdf_epub"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size"
                android:textAppearance="?attr/textAppearanceSubtitle2" />

            <com.google.android.material.slider.Slider
                android:id="@+id/fontSizeSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hapticFeedbackEnabled="true"
                android:stepSize="0.1"
                android:value="1.0"
                android:valueFrom="0.5"
                android:valueTo="2.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/theme"
                android:textAppearance="?attr/textAppearanceSubtitle2" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hapticFeedbackEnabled="false"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/themeChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDefault"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hapticFeedbackEnabled="true"
                        android:text="@string/defaultOption" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDark"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hapticFeedbackEnabled="true"
                        android:text="@string/dark" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSepia"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hapticFeedbackEnabled="true"
                        android:text="@string/sepia" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipBlue"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hapticFeedbackEnabled="true"
                        android:text="@string/feelin_blue" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipTerminal"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hapticFeedbackEnabled="true"
                        android:text="@string/terminal" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/font_family"
                android:textAppearance="?attr/textAppearanceSubtitle2" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hapticFeedbackEnabled="false"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/fontChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSans"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hapticFeedbackEnabled="true"
                        android:text="@string/sans" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSerif"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hapticFeedbackEnabled="true"
                        android:text="@string/serif" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMono"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hapticFeedbackEnabled="true"
                        android:text="@string/mono" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipCondensed"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hapticFeedbackEnabled="true"
                        android:text="@string/condensed" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipCursive"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hapticFeedbackEnabled="true"
                        android:text="@string/cursive" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/showSearchLayoutBtn"
                    style="@style/Widget.Material3Expressive.Button.IconButton.Outlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/find_text"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/aboutBtn"
                    style="@style/Widget.Material3Expressive.Button.IconButton.Outlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/about"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>