<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="#222"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/endFindBtn"
                android:layout_width="10sp"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:backgroundTint="#222"
                android:contentDescription="@string/stop_searching"
                android:tooltipText="Stop Search"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

            <EditText
                android:id="@+id/findTxt"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/search_text"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <ImageButton
                android:id="@+id/findTxtBtn"
                android:layout_width="10sp"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:backgroundTint="#222"
                android:contentDescription="@string/find_instances_of_text"
                android:tooltipText="Find Next"
                app:srcCompat="@android:drawable/ic_menu_search" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/menuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="10dp"
                android:alpha="0.8"
                android:clickable="true"
                android:contentDescription="@string/menu"
                android:focusable="true"
                android:foregroundTint="@color/white"
                android:hapticFeedbackEnabled="true"
                app:srcCompat="@drawable/main_menu"
                tools:ignore="ClassNameCheck" />

            <WebView
                android:id="@+id/readerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:forceHasOverlappingRendering="false">

            </WebView>

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>